# browser-automation

./: .gitignore  context.md  index.html  package.json  pnpm-lock.yaml  pyproject.toml
.github/workflows/: release.yml
py-sidecar/: playwright-tools-daemon.spec
py-sidecar/browser/: __init__.py  handlers.py  install.py  launch.py  manager.py
py-sidecar/browser/sessions/: __init__.py  handlers.py  manager.py
py-sidecar/linkedin/posts/: handlers.py  run_manager.py  scraper.py  scrolling.py
py-sidecar/sidecar/: __init__.py  builtins.py  bus.py  daemon.py  registry.py  transport.py
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  diesel.toml  tauri.conf.json
src-tauri/migrations/2026-06-17-000001_init/: up.sql
src-tauri/migrations/2026-06-17-000002_linkedin_posts/: down.sql  up.sql
src-tauri/src/: daemon.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: db.rs  linkedin_posts.rs  mod.rs  sessions.rs
src-tauri/src/db/: connection.rs  linkedin_posts.rs  mod.rs  models.rs  schema.rs  sessions.rs
src-tauri/src/sidecar/: builtins.rs  bus.rs  mod.rs  registry.rs  transport.rs
src/components/: CheckingScreen.tsx  MainApp.tsx  SetupScreen.tsx
src/components/layout/: AppSidebar.tsx  DashboardLayout.tsx
src/components/ui/: checkbox.tsx
src/lib/: api.ts
src/lib/sessions/: api.ts
src/lib/tools/: registry.ts
src/store/: browserSlice.ts  index.ts  sessionsSlice.ts  setupSlice.ts
src/store/linkedin/: postsSlice.ts
src/tools/browser/: BrowserToolPage.tsx
src/tools/sessions/: PlatformSessionsPage.tsx  (+1 more)
(+17 files in other folders)
