[project]
name = "playwright-tools-daemon"
version = "0.1.0"
description = "Python daemon for the playwright-tools Tauri app"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
build = ["pyinstaller>=6.10"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["py-sidecar/sidecar"]

[tool.uv]
package = false
